assets/css/styles.scss
---
---

/*!
 * Copyright (c) 2022. Implex
 * All rights reserved
 */

@import "mixins";
@import "animations";
@import "about";
@import "advantages";
@import "blog";
@import "blog-posts";
@import "cases-list";
@import "clients";
@import "clients-carousel";
@import "footer";
@import "intro";
@import "services";
@import "how-it-works";
@import "partnership";
@import "post-preview";
@import "vacancy-preview";
@import "header";
@import "contact-us";
@import "quote";
/* pages */
@import "case-study";
@import "careers";
@import "blogs";
/* case studies */
@import "yoy";
@import "admit-me";
@import "smartlane";
@import "wikiart";

@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: url(/assets/font/Roboto-Light.ttf);
}
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(/assets/font/Roboto-Regular.ttf);
}
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url(/assets/font/Roboto-Medium.ttf);
}
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url(/assets/font/Roboto-Bold.ttf);
}

* {
  box-sizing: border-box;
}

body {
  font-family: 'Roboto', Arial, sans-serif;
  font-size: 20px;
  font-weight: 300;
  margin: 0;
  padding: 0;
  color: black;
  -webkit-font-smoothing: antialiased;
}

.text-center {
  text-align: center;
}

.section {
  overflow: hidden;
  padding: 150px 0;

  @include tablet-landscape-screen {
    padding: 120px 0;
  }

  @include tablet-screen {
    padding: 80px 20px;
  }

  h1 {
    @include font(42px, 600);
    line-height: 1.23;
    margin: 0 auto;
    padding-bottom: 40px;

    @include small-tablet-screen {
      padding-bottom: 16px;
    }
  }

  h2 {
    @include font(24px, 300);
    line-height: 1.5;
    max-width: 560px;
    margin: 0 auto;
  }

  .content {
    margin: 0 auto;
    max-width: 1200px;

    @include small-desktop-screen {
      max-width: 960px;
    }
  }

  &.section-dark {
    padding: 0;
    color: white;

    h2 {
      max-width: 600px;
    }
  }
}

.post-content {
  line-height: 1.55;
  margin: 0 auto;
  max-width: 760px;
  padding: 95px 0;

  @include small-desktop-screen {
    max-width: 620px;
  }

  @include tablet-screen {
    max-width: 100%;
    margin-left: 90px;
    margin-right: 90px;
  }

  @include mobile-screen {
  }

  .post-metadata {
    color: rgba(0, 0, 0, 0.5);
    font-size: 10px;
    font-weight: 600;
    letter-spacing: 1px;
    margin-top: 15px;
    text-transform: uppercase;

    span + span {
      margin-left: 16px;
    };
  }

  a {
    color: inherit;
    text-decoration: none;
    border-bottom: 1px solid rgb(250, 139, 65);
  }

  img {
    max-width: 100%;
  }

  blockquote {
    font-weight: bold;
    font-style: italic;
    text-align: center;

    blockquote {
      font-style: normal;
      font-weight: 300;
      margin: 36px 0;
    }
  }

  .author {
    @include flex(row, flex-start, center);
    border-bottom: none;
    font-size: 12px;
    line-height: 1.55;
    margin-top: 36px;
  }

  .author-avatar {
    @include size(30px, 30px);
    margin-right: 10px;
    border-radius: 50%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }
}

.case-study {
  line-height: 1.55;
  margin-top: 60px;

  @include tablet-screen {
    margin: 0;
  }

  h1, h2 {
    text-align: center;
    line-height: 1.23;
    margin: 0;
  }

  h1 {
    font-size: 52px;
    margin-bottom: 60px;
    padding: 0 20px;

    @include small-desktop-screen {
      font-size: 48px;
    }

    @include small-tablet-screen {
      font-size: 30px;
    }
  }

  h2 {
    font-size: 42px;
    margin-bottom: 34px;

    @include small-desktop-screen {
      font-size: 38px;
    }

    @include small-tablet-screen {
      font-size: 30px;
      margin-bottom: 15px;
    }
  }

  p {
    font-size: 20px;
  }

  section {
    padding: 75px 0;

    @include mobile-screen {
      padding: 30px 0 45px;
    }

    &.section-black {
      background-color: #000;
    }

    &.section-grey {
      background-color: #f5f5f5;
    }

    &.remove-padding {
      @include mobile-screen {
        padding-bottom: 0;
      }
    }
  }

  ul {
    margin: 0;
  }

  .content {
    box-sizing: content-box;
    max-width: 1200px;

    @include small-desktop-screen {
      max-width: 960px;
    }

    @include tablet-screen {
      max-width: 640px;
    }

    h1 {
      margin: 0 auto;
    }
  }

  .col-2 {
    display: grid;
    grid-template-columns: repeat(2, 50%);

    & > div {
      margin: 0 20px;
    }

    &.margin-top {
      margin-top: 30px;
    }

    @include tablet-screen {
      display: block;
    }

    .quote + .quote {
      @include mobile-screen {
        margin-top: 20px;
      }
    }
  }

  .sub-heading {
    margin: 40px 0 45px;

    @include small-desktop-screen {
      font-size: 22px;
      max-width: 560px;
      margin: 40px auto 45px;
    }

    @include small-tablet-screen {
      font-size: 20px;
      margin-left: 20px;
      margin-right: 20px;
    }
  }

  .image {
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    padding-bottom: 100%;
    width: 100%;

    @include tablet-screen {
      height: auto;
    }
  }

  .column-content {
    @include small-desktop-screen {
      @include font(18px, 300);
      line-height: 1.55;
    }

    @include small-tablet-screen {
      font-size: 16px;
    }

    &.padding-top {
      padding-top: 28px;
    }

    .subtitle {
      @include tablet-screen {
        padding-bottom: 16px;
      }
    }
  }

  .column-content + .column-content {
    @include tablet-screen {
      padding-top: 40px;
    }
  }

  .column-wrapper {
    max-width: 460px;

    @include small-desktop-screen {
      max-width: 380px;
    }

    @include tablet-screen {
      max-width: 600px;
    }

    &.huge {
      max-width: 660px;

      @include small-desktop-screen {
        max-width: 540px;
      }

      @include tablet-screen {
        padding: 0 20px;
      }

      @include small-tablet-screen {
        padding: 0;
      }
    }

    &.big {
      max-width: 560px;

      @include small-desktop-screen {
        max-width: 460px;
      }

      @include tablet-screen {
        margin-top: 100px;
        padding: 0 20px;
      }

      @include small-tablet-screen {
        padding: 0;
      }

      @include mobile-screen {
        margin-top: 30px;
      }

      & > h2 {
        font-size: 42px;

        @include mobile-screen {
          font-size: 30px;
        }
      }
    }

    &.small {
      max-width: 360px;

      @include small-desktop-screen {
        max-width: 300px;
      }
    }

    &.huge,
    &.big,
    &.small {
      @include tablet-screen {
        max-width: 100%;
      }
    }

    &.margin-left {
      margin-left: 100px;

      @include small-desktop-screen {
        margin-left: 80px;
      }

      @include tablet-screen {
        margin: 0 auto;
      }

      @include small-tablet-screen {
        margin: 0 20px;
      }
    }

    &.margin-top {
      @include tablet-screen {
        margin-top: 20px;
      }
    }

    &.remove-padding {
      @include mobile-screen {
        padding: 0;
      }
    }

    &.center-content {
      @include flex(column, center, center);
    }
  }

  .technologies {
    margin-top: 55px;

    @include small-desktop-screen {
      font-size: 22px;
    }

    @include small-tablet-screen {
      font-size: 20px;
    }
  }

  .logos-row {
    @include flex(row, space-between, center);
    flex-wrap: wrap;

    @include tablet-screen {
      justify-content: center;
    }

    @include mobile-screen {
      padding: 0 20px;
    }

    img {
      max-width: 160px;
    }
  }
}

.vacancy {
  margin: 95px 0;
}

.content {
  margin: 0 auto;
  max-width: 960px;
}

.button {
  @include size(330px, 56px);
  @include font(16px, 700);
  font-family: 'Roboto', Arial, sans-serif;
  background-color: $orange;
  border: 1px solid $orange;
  border-radius: 3px;
  color: white;
  cursor: pointer;
  text-transform: capitalize;

  @include tablet-screen {
    @include size(160px, 60px);
  }

  &.button-outline {
    background-color: transparent;
    color: $orange;
  }
}

a.button {
  @include flex(row, center, center);
  text-decoration: none;
}

